# smart-building

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: house_default.yaml
data/processed/: energy_balance_separated.csv  ev_sessions.csv
docs/: fusionsolar_data.md  implementation_plan.md  stack.md
scripts/: run_comparison.py  run_optimization.py
src/smart_building/: baseline.py  config.py  data_loader.py  model.py
